--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "build": "react-scripts build",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
-
   },
-  "homepage" : "http://ashd32.github.io/reactsql",
+  "homepage": "http://ashd32.github.io/reactsql",
   "dependencies": {
     "alasql": "^0.4.5",
-    "gh-pages": "",
+    "dist": "^0.1.2",
     "prop-types": "^15.6.1",
     "react": "^16.4.0"
   },
