--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "alasql": "^0.4.5",
     "fsevents": "^2.1.2",
+    "gh-pages": "^2.1.1",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-scripts": "^3.2.0"
